# sandbox

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh  lefthook.yml  rustfmt.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
crates/sandbox-cli/: AGENTS.md  Cargo.toml
crates/sandbox-cli/src/: error.rs  main.rs
crates/sandbox-cli/src/commands/: attach.rs  dotfiles.rs  down.rs  exec.rs  logs.rs  mod.rs  net.rs  nuke.rs  proxy.rs  ps.rs  run.rs  scan.rs
crates/sandbox-cli/tests/: lifecycle.rs
crates/sandbox-core/: AGENTS.md  Cargo.toml
crates/sandbox-core/languages/: README.md  node.toml  rust.toml
crates/sandbox-core/src/: config.rs  error.rs  hash.rs  lang.rs  lib.rs  paths.rs  profile.rs  project.rs  state.rs
crates/sandbox-docker/: AGENTS.md  Cargo.toml
crates/sandbox-docker/src/: cmd.rs  error.rs  lib.rs  lifecycle.rs  network.rs  plan.rs  scanner.rs  volume.rs
crates/sandbox-docker/src/compose/: discover.rs  lifecycle.rs  mod.rs
crates/sandbox-proxy/: AGENTS.md  Cargo.toml
crates/sandbox-proxy/src/: error.rs  labels.rs  lib.rs  traefik.rs
crates/sandbox-proxy/src/ports/: env.rs  mod.rs  source.rs
crates/sandbox-scan/: AGENTS.md  Cargo.toml
crates/sandbox-scan/scanner-image/: Dockerfile
crates/sandbox-scan/src/: cache.rs  engine.rs  error.rs  findings.rs  lib.rs  project_hash.rs  suppress.rs
crates/sandbox-scan/src/clamav/: mod.rs
crates/sandbox-scan/src/compose/: mod.rs  parse.rs  rules.rs
crates/sandbox-scan/src/heuristics/: eval_patterns.rs  mod.rs  network.rs  package_json.rs  regex_util.rs  vscode.rs
crates/sandbox-scan/src/yara/: mod.rs
crates/sandbox-scan/src/yara/rules/: contagious_interview.yar
docs/: open-questions.md  playbook.md  roadmap.md  sad.md  threat-model.md
docs/.obsidian/: community-plugins.json
docs/.obsidian/templates/: feature-template.md  sdd-template.md  spec-template.md
docs/adrs/: 0001-rust-binary-cli.md  0006-language-manifest-toml.md  0007-state-storage-xdg.md  0009-container-reuse-semantics.md  README.md
docs/sandbox/: open-questions.md  playbook.md  release-process.md  release-runbook.md  release-v0.1-backlog.md  roadmap.md  sad.md  security-review-v0.1.md  smoke-tests.md  srs.md  threat-model.md  usage-flow.md  usage.md
docs/sandbox/.obsidian/: app.json  community-plugins.json
docs/sandbox/.obsidian/plugins/templater-obsidian/: data.json
docs/sandbox/.obsidian/templates/: adr-template.md  feature-template.md  sdd-template.md
docs/sandbox/adrs/: 0001-rust-binary-cli.md  0002-docker-shell-out-vs-bollard.md  0003-volume-strategy.md  0004-network-isolation.md  0005-reverse-proxy-traefik.md  0006-language-manifest-toml.md  0007-state-storage-xdg.md  0008-scan-pipeline.md  0009-container-reuse-semantics.md  0010-project-compose-deps.md  0011-typed-errors-throughout.md  0012-localhost-port-binding.md  README.md
docs/sandbox/branch-protection/: README.md  dev.json  main.json
languages/: README.md  bun.toml  node.toml  rust.toml
scripts/dev/: fmt.sh  install-hooks.sh  lint.sh  test.sh
