[package]
name = "sandbox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Secure-by-default isolated Docker dev environments for running untrusted code (installs the `sandbox` binary)."

[[bin]]
name = "sandbox"
path = "src/main.rs"

[dependencies]
sandbox-core.workspace = true
sandbox-docker.workspace = true
sandbox-scan.workspace = true
sandbox-proxy.workspace = true

thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true

[features]
# Tests that require a live local Docker daemon. Off by default so
# `cargo test` is hermetic in CI and on machines without Docker.
docker-tests = []

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
