[package]
name = "sandbox-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
walkdir.workspace = true
directories.workspace = true

[lints]
workspace = true
