[package]
name = "sandbox-docker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
sandbox-core.workspace = true

thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
walkdir.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
