[package]
name = "sandbox-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Traefik reverse-proxy integration for the sandbox CLI."

[dependencies]
sandbox-core.workspace = true

thiserror.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
regex.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
