[package]
name = "sandbox-scan"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
sandbox-core.workspace = true

thiserror.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
walkdir.workspace = true
regex.workspace = true

yara-x.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
